# krus_old

./: .gitmodules  CMakeLists.txt  README.md
include/: factorial.h
include/krus/: dfa.h  finite_state_machine.h  nfa.h  state_wrapper.h  utils.h
include/parselib/: finite_state_machine.h
src/: dfa.cpp  factorial.cpp  finite_state_machine.cpp  nfa.cpp  state_wrapper.cpp
tests/: compiled_tests.cpp  test_main.cpp
